--- a/proyectoJardin/src/app/components/inicio/inicio.component.html
+++ b/proyectoJardin/src/app/components/inicio/inicio.component.html
@@ -1,3 +1,174 @@
-<p>
-  inicio works!
-</p>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active" style="background-image: url(./assets/css/img/computers.png);">
+      <div class="carousel-caption narrow text-center">
+        <h1>Welcome To Nuno</h1>
+        <h3>Animated Bootstrap Theme</h3>
+        <a class="btn btn-outline-light btn-lg" href="#score">Get Started</a>
+      </div>
+    </div>
+    
+    <div class="carousel-item" style="background-image: url(./assets/css/img/computers-2.png);">
+    </div>
+
+    <div class="carousel-item" style="background-image: url(./assets/css/img/computers-3.png);">
+    </div>
+    
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- Start Portafolio Section -->
+
+<div class="portafolio">
+  <div class="jumbotron container-fluid">
+    
+    <div class="col-12 text-center">
+      <h3 class="heading">Portafolio</h3>
+      <div class="heading-underline"></div>
+    </div>
+
+    <div class="row no-padding">
+
+      <div class="col-sm-4">
+        <div class="portfolio">
+          <a href="#" target="_blank">
+            <img src="./assets/css/img/portfolio/1.png">
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="portfolio">
+          <a href="#" target="_blank">
+            <img src="./assets/css/img/portfolio/2.png">
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="portfolio">
+          <a href="#" target="_blank">
+            <img src="./assets/css/img/portfolio/3.png">
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="portfolio">
+          <a href="#" target="_blank">
+            <img src="./assets/css/img/portfolio/4.png">
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="portfolio">
+          <a href="#" target="_blank">
+            <img src="./assets/css/img/portfolio/5.png">
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="portfolio">
+          <a href="#" target="_blank">
+            <img src="./assets/css/img/portfolio/6.png">
+          </a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="narrow text-center">
+      <div class="col-12">
+        <p class="lead">Want to learn how to develop Bootstrap Themes?</p>
+        <a class="btn btn-secondary btn-md" href="#" target="_blank">Bootstrap Course</a>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<!-- End Portafolio Section -->
+
+<!-- Start Team Section -->
+
+<div class="team">
+
+  <div class="col-12 text-center">
+    <h3 class="heading">Team</h3>
+    <div class="heading-underline"></div>
+  </div>
+  
+  <div class="row padding">
+
+    <div class="col-md-6">
+      <div class="card text-center">
+        <img class="card-img-top" src="./assets/css/img/team/team1.png">
+        <div class="card-body">
+          <h4>Jessica Miller</h4>
+          <p>I have over 10 years of experience in technology and haven't worked with a better team than Nuno.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="card text-center">
+        <img class="card-img-top" src="./assets/css/img/team/team2.png">
+        <div class="card-body">
+          <h4>Charles David</h4>
+          <p>I have over 10 years of experience in technology and haven't worked with a better team than Nuno.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+<!-- End Team Section -->
+
+<!-- Start Contact Section -->
+<div class="contact" class="offset">
+  <footer>
+    <div class="row justify-content-center">
+
+      <div class="col-md-5 text-center">
+        <img src="./assets/css/img/nuno.png">
+        <p>At our core is a collection of design and development solutions that represent everything your business needs to compete in the modern marketplace.</p>
+        <strong>Contact info</strong>
+        <p>(888) 888-8888 <br> email@nuno.com</p>
+
+        <a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+
+      <hr class="socket">
+      &copy; Nuno Theme.
+
+    </div>
+  </footer>
+</div>
+<!-- End Contact Section -->
+
+
+
+
+
+ 
