Pagina principal de Jardin modificada

--- a/proyectoJardin/src/app/app.component.html
+++ b/proyectoJardin/src/app/app.component.html
@@ -50,7 +50,32 @@
 <!--- End Home Section -->
 
     <router-outlet></router-outlet>
-	
+
+  <!-- Start Contact Section -->
+<div class="contact" class="offset">
+    <footer>
+      <div class="row justify-content-center">
+  
+        <div class="col-md-5 text-center">
+          <img src="./assets/css/img/iconoTitulo.png">
+          <p>Especialistas en poda de arboles, palmas y jardineria en general. Amplio catálogo y variedad de servicios. LLámenos sin compromiso y le atenderemos encantados.</p>
+          <strong>Informacion de contacto</strong>
+          <p>(888) 888-8888 <br> email@hotmail.com</p>
+  
+          <a href="https://www.facebook.com/alejandro.machacanavia" target="_blank"><i class="fab fa-facebook-square"></i></a>
+          <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
+          <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <!--
+        <hr class="socket">
+        &copy; Nuno Theme.
+        -->
+      </div>
+    </footer>
+  </div>
+  <!-- End Contact Section -->
+  
+
 <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
 
 </body>
