--- a/proyectoJardin/src/app/components/inicio/inicio.component.html
+++ b/proyectoJardin/src/app/components/inicio/inicio.component.html
@@ -59,7 +59,7 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a href="#" target="_blank">
+          <a [routerLink]="['/detalle']">
             <img src="./assets/css/img/portfolio2/poda.jpg">
             <div class="centrado">
               <h1>Poda y tala de pinos y palmeras</h1>
@@ -160,16 +160,19 @@
             </p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 justify-content-center">
-            <img src="./assets/css/img/callCenter.png" style="max-width:100%" class="img-responsive">
+            <img src="./assets/css/img/callCenter2.png" style="width:100%" class="img-responsive">
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
             <h4>Ubicación</h4>
             <p>
-              Nos pueden encontrar en la siguiente direccion.
+              Nos pueden encontrar en la siguiente direccion:
+            </p>
+            <p>
+              Calle de la Guaidiana, Casa Nro 888, (Logo podas Mallorca)
             </p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 justify-content-center">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d326.4452912310315!2d2.678391608014257!3d39.59447362007658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2ses!4v1550085644636" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d326.4452912310315!2d2.678391608014257!3d39.59447362007658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2ses!4v1550085644636" width="330" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -204,29 +207,6 @@
 
 <!-- End Team Section -->
 
-<!-- Start Contact Section -->
-<div class="contact" class="offset">
-  <footer>
-    <div class="row justify-content-center">
-
-      <div class="col-md-5 text-center">
-        <img src="./assets/css/img/iconoTitulo.png">
-        <p>Especialistas en poda de arboles, palmas y jardineria en general. Amplio catálogo y variedad de servicios. LLámenos sin compromiso y le atenderemos encantados.</p>
-        <strong>Informacion de contacto</strong>
-        <p>(888) 888-8888 <br> email@hotmail.com</p>
-
-        <a href="https://www.facebook.com/alejandro.machacanavia" target="_blank"><i class="fab fa-facebook-square"></i></a>
-        <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
-      <!--
-      <hr class="socket">
-      &copy; Nuno Theme.
-      -->
-    </div>
-  </footer>
-</div>
-<!-- End Contact Section -->
 
 
 
