--- a/proyectoJardin/src/assets/css/styles.css
+++ b/proyectoJardin/src/assets/css/styles.css
@@ -164,7 +164,7 @@ body {
 }
 .portfolio h1 {
   color: white;
-  font-size: 3.8rem;
+  font-size: 2.3rem;
   font-weight: 700;
   letter-spacing: .3rem;
   text-shadow: .1rem .1rem .8rem black;
@@ -209,6 +209,7 @@ body {
 
   .team {
     padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   /*--- Contact ---*/
@@ -217,7 +218,7 @@ body {
     background-color: #40474e;
     color: white;
     padding: 2rem 0 3rem;
-    margin-top: 1rem;
+    margin-top: 0rem;
   }
   footer img{
     height: 3rem;
@@ -249,6 +250,15 @@ body {
     width: 100%;
   }
 
+  /*--- Detalle ---*/
+  .detalle {
+    background: #56ab2f;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #a8e063, #56ab2f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    padding-top: 7rem;
+  }
+
   
 
   @media (max-width: 767px) {
@@ -277,8 +287,13 @@ body {
 
   @media (max-width: 576px) {
     .navbar-brand {
-      width: 75%;
+      width: 70%;
+    }
 
+    .navbar-toggler {
+      
+      background-color: lightslategrey!important;
+      /*background-color: mediumseagreen!important;*/
     }
   }
 
