Pagina principal de Jardin modificada 2

--- a/proyectoJardin/src/app/components/inicio/inicio.component.html
+++ b/proyectoJardin/src/app/components/inicio/inicio.component.html
@@ -10,8 +10,8 @@
       <div class="carousel-caption narrow text-center">
         <h1>Mantenimiento y diseño de Jardines</h1>
         <h3>Palma de mallorca Islas Baleares</h3>
-        <a class="btn btn-outline-light btn-lg" href="#score" (click)="scroll('portafolio')">Servicios</a>
-        <a class="btn btn-outline-light btn-lg" href="#score" (click)="scroll('team')">Contactos</a>
+        <a class="btn btn-outline-light btn-lg" [routerLink]="['/contacto']">Te llamamos gratis</a>
+        <a class="btn btn-outline-light btn-lg" [routerLink]="['/datos']">Escribenos</a>
       </div>
     </div>
 
@@ -19,8 +19,8 @@
       <div class="carousel-caption narrow text-center">
         <h1>Mantenimiento y diseño de Jardines</h1>
         <h3>Palma de mallorca Islas Baleares</h3>
-        <a class="btn btn-outline-light btn-lg" href="#score" (click)="scroll('portafolio')">Servicios</a>
-        <a class="btn btn-outline-light btn-lg" href="#score" (click)="scroll('team')">Contactos</a>
+        <a class="btn btn-outline-light btn-lg" [routerLink]="['/contacto']">Te llamamos gratis</a>
+        <a class="btn btn-outline-light btn-lg" [routerLink]="['/datos']">Escribenos</a>
       </div>
     </div>
 
@@ -28,8 +28,8 @@
       <div class="carousel-caption narrow text-center">
         <h1>Mantenimiento y diseño de Jardines</h1>
         <h3>Palma de mallorca Islas Baleares</h3>
-        <a class="btn btn-outline-light btn-lg" href="#score" (click)="scroll('portafolio')">Servicios</a>
-        <a class="btn btn-outline-light btn-lg" href="#score" (click)="scroll('team')">Contactos</a>
+        <a class="btn btn-outline-light btn-lg" [routerLink]="['/contacto']">Te llamamos gratis</a>
+        <a class="btn btn-outline-light btn-lg" [routerLink]="['/datos']">Escribenos</a>
       </div>
     </div>
 
