--- a/proyectoJardin/src/app/app.component.html
+++ b/proyectoJardin/src/app/app.component.html
@@ -33,8 +33,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link active" href="#">Inicio <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" (click)="scrollInicio('portafolio')" >Servicios</a>
-                <a class="nav-item nav-link active" (click)="scrollInicio('team')" >Contacto</a>
+                <a class="nav-item nav-link active" [routerLink]="['/contacto']" >Te llamamos</a>
+                <a class="nav-item nav-link active" [routerLink]="['/datos']" >Escribenos</a>
                 <!-- <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
               </div>
             </div>    
