--- a/proyectoJardin/src/assets/css/styles.css
+++ b/proyectoJardin/src/assets/css/styles.css
@@ -259,6 +259,14 @@ body {
     padding-top: 7rem;
   }
 
+  .contacto {
+    background: #76b852;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8DC26F, #76b852);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8DC26F, #76b852); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    padding-top: 7rem;
+  }
+
   
 
   @media (max-width: 767px) {
