Commit de 1ra Version en producion

--- a/proyectoJardin/src/app/components/inicio/inicio.component.html
+++ b/proyectoJardin/src/app/components/inicio/inicio.component.html
@@ -8,8 +8,8 @@
   <div class="carousel-inner">
     <div class="carousel-item active" style="background-image: url(./assets/css/img/poda1.jpg);">
       <div class="carousel-caption narrow text-center">
-        <h1>Mantenimiento y diseño de Jardines</h1>
-        <h3>Palma de mallorca Islas Baleares</h3>
+        <h1>Realización de jardines y plantación</h1>
+        <h3>Mantenimiento, tratamientos fitosanitarios y puesta a punto de jardines. <br> Palma de mallorca Islas Baleares</h3>
         <a class="btn btn-outline-light btn-lg" [routerLink]="['/contacto']">Te llamamos gratis</a>
         <a class="btn btn-outline-light btn-lg" [routerLink]="['/datos']">Escribenos</a>
       </div>
@@ -17,8 +17,8 @@
 
     <div class="carousel-item" style="background-image: url(./assets/css/img/jardin3.jpg);">
       <div class="carousel-caption narrow text-center">
-        <h1>Mantenimiento y diseño de Jardines</h1>
-        <h3>Palma de mallorca Islas Baleares</h3>
+        <h1>Realización de jardines y plantación</h1>
+        <h3>Mantenimiento, tratamientos fitosanitarios y puesta a punto de jardines. <br> Palma de mallorca Islas Baleares</h3>
         <a class="btn btn-outline-light btn-lg" [routerLink]="['/contacto']">Te llamamos gratis</a>
         <a class="btn btn-outline-light btn-lg" [routerLink]="['/datos']">Escribenos</a>
       </div>
@@ -26,8 +26,8 @@
 
     <div class="carousel-item" style="background-image: url(./assets/css/img/jardin5.jpg);">
       <div class="carousel-caption narrow text-center">
-        <h1>Mantenimiento y diseño de Jardines</h1>
-        <h3>Palma de mallorca Islas Baleares</h3>
+        <h1>Realización de jardines y plantación</h1>
+        <h3>Mantenimiento, tratamientos fitosanitarios y puesta a punto de jardines. <br> Palma de mallorca Islas Baleares</h3>
         <a class="btn btn-outline-light btn-lg" [routerLink]="['/contacto']">Te llamamos gratis</a>
         <a class="btn btn-outline-light btn-lg" [routerLink]="['/datos']">Escribenos</a>
       </div>
@@ -59,10 +59,10 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a [routerLink]="['/detalle']">
+          <a [routerLink]="['/detalle1']">
             <img src="./assets/css/img/portfolio2/poda.jpg">
             <div class="centrado">
-              <h1>Poda y tala de pinos y palmeras</h1>
+              <h1>Podas y talas de pinos y palmeras</h1>
             </div>
           </a>
         </div>
@@ -70,7 +70,7 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a href="#" target="_blank">
+          <a [routerLink]="['/detalle2']">
             <img src="./assets/css/img/portfolio2/mantenimiento.jpg">
             <div class="centrado">
               <h1>Jardinería en general</h1>
@@ -81,7 +81,7 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a href="#" target="_blank">
+          <a [routerLink]="['/detalle3']">
             <img src="./assets/css/img/portfolio2/fumigar2.jpg">
             <div class="centrado">
               <h1>Fumigación y limpieza de Jardines</h1>
@@ -92,7 +92,7 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a href="#" target="_blank">
+          <a [routerLink]="['/detalle4']">
             <img src="./assets/css/img/portfolio2/piscina2.jpg">
             <div class="centrado">
                 <h1>Manteniminiento de Piscinas</h1>
@@ -103,7 +103,7 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a href="#" target="_blank">
+          <a [routerLink]="['/detalle5']">
             <img src="./assets/css/img/portfolio2/diseño_jardin.jpg">
             <div class="centrado">
               <h1>Diseño de Jardines</h1>
@@ -114,7 +114,7 @@
 
       <div class="col-sm-4">
         <div class="portfolio">
-          <a href="#" target="_blank">
+          <a [routerLink]="['/detalle6']">
             <img src="./assets/css/img/portfolio2/cespedSintetico.jpg">
             <div class="centrado">
                 <h1>Y muchos otros servicios mas..</h1>
@@ -150,13 +150,13 @@
               Puedes llamarnos sin ningun compromiso al siguiente numero de telefono:
             </p>
             <p>
-              <b>(888) 888-8888</b> 
+              <b>647 269 541</b> 
             </p>
             <p>
               Tambien puedes comunicarte con nosotros mediante el siguiente correo electronico: 
             </p>
             <p>
-                <b>email@gmail.com</b> 
+                <b>podasyjardines.jordy@gmail.com</b> 
             </p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 justify-content-center">
