--- a/proyectoJardin/src/app/app.component.html
+++ b/proyectoJardin/src/app/app.component.html
@@ -18,7 +18,7 @@
     <div class="row navbar-dark">
       <div class="col-sm-12">
           <div class="phoneNumber">
-              <i class="fas fa-phone"></i> (888) 888-8888
+              <i class="fas fa-phone"></i> 647 269 541
           </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
         
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link active" href="#">Inicio <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" [routerLink]="['/contacto']" >Te llamamos</a>
                 <a class="nav-item nav-link active" [routerLink]="['/datos']" >Escribenos</a>
                 <!-- <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
@@ -60,11 +60,10 @@
           <img src="./assets/css/img/iconoTitulo.png">
           <p>Especialistas en poda de arboles, palmas y jardineria en general. Amplio catálogo y variedad de servicios. LLámenos sin compromiso y le atenderemos encantados.</p>
           <strong>Informacion de contacto</strong>
-          <p>(888) 888-8888 <br> email@hotmail.com</p>
+          <p> 647 269 541 <br> podasyjardines.jordy@gmail.com </p>
   
-          <a href="https://www.facebook.com/alejandro.machacanavia" target="_blank"><i class="fab fa-facebook-square"></i></a>
-          <a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
-          <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/jorge.avellaneda.94801" target="_blank"><i class="fab fa-facebook-square"></i></a>
+
         </div>
         <!--
         <hr class="socket">
